Fix validation table horizontal scroll behavior (2)

--- a/shared/css/styles.css
+++ b/shared/css/styles.css
@@ -1014,7 +1014,7 @@ code[class*="language-"] {
   
   .validation-table th:first-child,
   .validation-table td:first-child {
-    width: 145px;
+    width: 142px;
   }
 }
 
